remove reference to proprirtary Courier New

--- a/XDUstyle.dtx
+++ b/XDUstyle.dtx
@@ -155,8 +155,8 @@ This package consists of the file  XDUstyle.dtx,
 \renewcommand{\footrulewidth}{0pt}}
 \pagestyle{fancy}
 
-\newfontfamily\CouNew{Courier New}
-\def\codebasicfont{\fontfamily{Courier New}\selectfont}
+\newfontfamily\CouNew{Noto Sans Mono}
+\def\codebasicfont{\fontfamily{Noto Sans Mono}\selectfont}
 
 \DefineVerbatimEnvironment{example}{Verbatim}%
   {frame=single,framerule=0.3mm,rulecolor=\color{red!70!green!20!blue!20},%
