use the logo of programming contest training base
The logo contains the Emoji "balloon" symbol.

--- a/Demo.tex
+++ b/Demo.tex
@@ -3,8 +3,8 @@
 
 \usepackage{xeCJK}
 \usetheme[
- sidebar, % 会在每页左侧加上导航栏，参考 The AAU Sidebar Beamer Theme 设置
-% xdblue, % 不选会默认西电红色调，选上会将主题设置为西电蓝色调
+% sidebar, % 会在每页左侧加上导航栏，参考 The AAU Sidebar Beamer Theme 设置
+ xdblue, % 不选会默认西电红色调，选上会将主题设置为西电蓝色调
 % english % 选上，会将图表等标题还原回英文标题
  ]{XDUstyle}
 
@@ -35,4 +35,4 @@
  \finalpage{{\huge 感谢观看！}}
 \end{frame}}
 
-\end{document} 
+\end{document}
