adjust logo position

--- a/XDUstyle.dtx
+++ b/XDUstyle.dtx
@@ -843,7 +843,7 @@ This package consists of the file  XDUstyle.dtx,
 	  \draw[draw=none,fill=frametitle.bg] (XDL5) rectangle (XDR5);
     }
     
-    \coordinate (logopos) at ([xshift=1.5cm,yshift=\beamer@height/2] IS);%coordinate of the logo
+    \coordinate (logopos) at ([xshift=1.5cm,yshift=\beamer@height/2-0.1cm] IS);%coordinate of the logo
 	\ifx\beamer@xducolor\beamer@xducolorblue%
       \node at (logopos) {\includegraphics[width=6cm]{XDUtheme/logo_xdblue}};
 	\else%
