--- a/XDUstyle.dtx
+++ b/XDUstyle.dtx
@@ -106,9 +106,9 @@ This package consists of the file  XDUstyle.dtx,
 %<xducolorstyle>\ProvidesPackage{beamercolorthemeXDUstyle}
 %<xduinnerstyle>\ProvidesPackage{beamerinnerthemeXDUstyle}
 %<xduouterstyle>\ProvidesPackage{beamerouterthemeXDUstyle}
-%<xdustyle|xducolorstyle|xduinnerstyle|xduouterstyle>[2015/12/27 v0.0.1 The Xidian University Style Beamer Theme]
+%<xdustyle|xducolorstyle|xduinnerstyle|xduouterstyle>[2015/12/27 v0.0.4 The Xidian University Style Beamer Theme]
 %<*driver>
-\ProvidesFile{XDUstyle.dtx}[2015/12/27 v0.0.1 The Xidian University Style Beamer Theme]
+\ProvidesFile{XDUstyle.dtx}[2015/12/27 v0.0.4 The Xidian University Style Beamer Theme]
 \documentclass[10pt]{ltxdoc}
 
 \usepackage[left=4cm,right=3cm,top=3cm,bottom=2cm]{geometry}
@@ -199,6 +199,9 @@ This package consists of the file  XDUstyle.dtx,
 %
 % \GetFileInfo{\jobname.dtx}
 % 
+% \changes{v0.0.4}{2019/10/16}{Fix FTBFS in v0.0.3.}
+% \changes{v0.0.3}{2019/10/16}{Do not set covered content style to transparent disregarding user setting.}
+% \changes{v0.0.2}{2019/06/26}{Modify for XDU ICPC.}
 % \changes{v0.0.1}{2015/12/27}{Finish the Xidian University Style Beamer Theme initially.}
 %
 % \DoNotIndex{\begin,\end,\begingroup,\endgroup}
